--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "react-tooltip": "^5.26.3",
     "sass": "^1.75.0",
+    "slick-carousel": "^1.8.1",
     "yet-another-react-lightbox": "^3.17.3"
   }
 }
