--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@iconify/react": "^4.1.1",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.2",
+    "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.26.3",
     "sass": "^1.75.0",
