--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.26.3",
