--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "@react-email/components": "^0.0.16",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
@@ -18,12 +19,14 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-international-phone": "^4.2.8",
     "react-intersection-observer": "^9.8.2",
     "react-outside-click-handler": "^1.3.0",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.26.3",
+    "resend": "^3.2.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
     "yet-another-react-lightbox": "^3.17.3",
