--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "^4.1.1",
     "@react-email/components": "^0.0.16",
+    "@stripe/stripe-js": "^3.3.0",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
@@ -29,6 +30,7 @@
     "resend": "^3.2.0",
     "sass": "^1.75.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^15.5.0",
     "yet-another-react-lightbox": "^3.17.3",
     "yup": "^1.4.0"
   }
